--- a/composer.json
+++ b/composer.json
@@ -19,7 +19,8 @@
     "require": {
         "php": ">=7.2.0",
         "mongdch/mon-util": "^1.5",
-        "workerman/crontab": "^1.0"
+        "workerman/crontab": "^1.0",
+        "mongdch/mon-think-orm": "^1.0"
     },
     "autoload": {
         "psr-4": {
