--- a/composer.json
+++ b/composer.json
@@ -2,7 +2,7 @@
     "name": "mongdch/gaia-crontab",
     "description": "The Gaia Framework crontab process.",
     "license": "MIT",
-    "homepage": "http://gdmon.com/",
+    "homepage": "https://github.com/MonGDCH",
     "keywords": [
         "gaia",
         "workerman",
@@ -12,7 +12,7 @@
         {
             "name": "Mon",
             "email": "985558837@qq.com",
-            "homepage": "http://www.gdmon.com/",
+            "homepage": "https://github.com/MonGDCH",
             "role": "Developer"
         }
     ],
