--- a/composer.json
+++ b/composer.json
@@ -18,10 +18,10 @@
     ],
     "require": {
         "php": ">=7.2.0",
-        "mongdch/mon-util": "^1.5",
         "workerman/crontab": "^1.0",
-        "mongdch/mon-env": "^1.1",
-        "mongdch/mon-log": "^1.0"
+        "mongdch/mon-util": "^1.5 || master-dev",
+        "mongdch/mon-env": "^1.1 || master-dev",
+        "mongdch/mon-log": "^1.0 || master-dev"
     },
     "autoload": {
         "psr-4": {
